--- a/week04.qmd
+++ b/week04.qmd
@@ -534,8 +534,9 @@ Load the `babynames` dataset and explore the main dplyr verbs. Each verb perform
 ```{r dplyr-basics, eval=FALSE}
 library(babynames)
 library(tidyverse)
+pak::pak("babynames")
 
-# Explore the data first
+# Explore the data first 
 glimpse(babynames)
 head(babynames)
 
@@ -677,8 +678,9 @@ What's wrong with the following code? Can you fix it?
 
 ```{r fix-code, eval=FALSE, error=TRUE}
 # Problem code:
-filter(babynames, name = "Sea")
+filter(babynames, name = "Sea") 
 filter(babynames, name == Sea)
+#filter(babynames, name == "Sea")
 ```
 
 **Your corrected code:**
@@ -695,6 +697,20 @@ filter(babynames, name == Sea)
 ## Problem 2: Most Popular Names  
 
 Which name was the most popular for a single gender in a single year? Compare arranging by `prop` vs `n`.
+
+```{r}
+# Arrange by proportion
+babynames |>
+  arrange(desc(prop)) |>
+  head(5)
+
+# Arrange by count  
+babynames |>
+  arrange(desc(n)) |>
+  head(5)
+
+# Are they the same? Why or why not?
+```
 
 ```{r popular-names-student, eval=FALSE}
 # Your code to find highest proportion:
@@ -720,7 +736,13 @@ Write a pipeline that will:
 
 ```{r girls-2017-student, eval=FALSE}
 # Your pipeline here:
+pak::pak("babynames")
+library(babynames)
 
+babynames |> 
+  filter(sex=="F"& year=="2017") |> 
+  select(name, sex, n) |> 
+  arrange(desc(n))
 
 ```
 
@@ -803,6 +825,18 @@ cholesterol_data
 
 ```{r cholesterol-solution-student, eval=FALSE}
 # Task 1 - Convert to long format:
+cholesterol_data <- tibble(
+  oat_bran_free = c(4.61, 5.42, 5.40, 4.54, 3.98), 
+  oat_bran = c(3.64, 5.57, 4.85, 4.80, 3.68)
+)
+cholesterol_data
+
+cholesterol_data <- tibble |> 
+  pivot_longer(
+    cols = oat_bran_free = c(4.61, 5.42, 5.40, 4.54, 3.98), 
+  oat_bran = c(3.64, 5.57, 4.85, 4.80, 3.68)
+  )
+sum(cholesterol_data)
 
 
 # Task 2 - Calculate summary statistics:
@@ -831,9 +865,17 @@ d. Store back in appropriate place
 
 ```{r calculate-rates-student, eval=FALSE}
 # Your approach for table2:
+# Reshape so cases and population are in separate columns
+tidy2 <- table2 |>
+  pivot_wider(names_from = type, values_from = count)
+
+# Calculate rate per 10,000
+tidy2 <- tidy2 |>
+  mutate(rate = (cases / population) * 10000)
 
 
 # Your approach for table3:
+
 
 
 ```
